--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46995,7 +46995,7 @@ html[class*="ie"] .dtp-hand, html[class*="ie"] .dtp-hour-hand {
 
 .ui-to-top:hover {
 	color: #fff;
-	background: #42b574;
+	background: #e0ab23;
 }
 
 .ui-to-top.active {
