--- a/assets/css/style-custom.css
+++ b/assets/css/style-custom.css
@@ -193,3 +193,8 @@ fieldset[disabled] .btn-default {
   .select2-container--bootstrap .select2-results__option--highlighted[aria-selected] {
       background-color: #E0AB23;
   }
+
+  .line-bottom {
+      padding-bottom: 20px;
+      border-bottom: 1px solid gray;
+  }
