--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1483,7 +1483,7 @@ hr {
 /** 1.4  Type */
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-	font-family: inherit;
+	font-family: "Raleway";
 	font-weight: 400;
 	line-height: 1.1;
 	color: inherit;
